# Tetris

./: .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  icon.rc  vcpkg.json
.github/workflows/: release.yml
cmake/: WinFixupBundle.cmake.in
include/: game.h  graphics.h  tetromino.h  util.h
src/: game.c  graphics.c  main.c  tetromino.c  util.c
